Fix horizontal alignment inside popup

--- a/style.css
+++ b/style.css
@@ -673,15 +673,16 @@ footer .footer-email {
 }
 
 .popup-technologies {
-  align-self: center;
-  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  margin-block: 20px;
 }
 
 .popup-technologies .technologies-used {
   margin: 0;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  margin-left: -15%;
   gap: 10px;
   font-size: 15px;
   line-height: 20px;
@@ -693,8 +694,9 @@ footer .footer-email {
 
 .popup-btns-container {
   display: flex;
-  gap: 20%;
+    gap: 10%;
   margin-bottom: 30px;
+  margin-left: -6%;
 }
 
 .popup-btns-container .popup-link {
@@ -703,8 +705,8 @@ footer .footer-email {
   justify-content: center;
   gap: 10px;
   background-color: var(--color-primary-2);
-  color: white;
-  min-width: 150px;
+   color: white;
+  min-width: 140px;
   padding: 12px;
   text-align: center;
   text-decoration: none;
